[package]
name = "rust-mpfr"
version = "0.1.0"
authors = [ "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Simple MPFR bindings for Rust based on rust-gmp"
license = "MIT"
repository = "https://github.com/fizyk20/rust-mpfr.git"

[lib]
name = "rust_mpfr"
crate-type = ["dylib"]

[dependencies]
libc = "0.1.8"
rust-gmp = "0.2.3"