[package]
name = "rust-mpfr"
version = "0.1.4"
authors = [ "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Simple MPFR bindings for Rust based on rust-gmp"
license = "MIT"
repository = "https://github.com/fizyk20/rust-mpfr.git"

[lib]
name = "rust_mpfr"
crate-type = ["rlib", "dylib"]

[dependencies]
libc = "*"
rust-gmp = "*"
rustc-serialize = "~0.3"
